[metadata]
license=MIT
license_file=LICENSE
classifiers =
    programming language :: python :: 3.7
    programming language :: python :: 3.8
    programming language :: python :: 3.9
    operating system :: OS Independent 

[options]
install_requires =
    ensure == 1.0.2
    py_youtube ==1.1.7
python_requires = >=3.7

[options.extra_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
template-setup-1.0= py.typed

[flake8]
max_line_length=160
exclude = __init__.py






